# int.ai

./: .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  DEPLOYMENT_SUMMARY.md  Dockerfile  Makefile  Procfile  README_WORKER.md  WORKER_RESTART_GUIDE.md  check_candidate_applications.py  delete_candidate.py  delete_candidate_direct.py  delete_test_candidate.py  delete_test_candidate_auto.py  deploy_worker.sh  docker-compose.yml  final_restart.sh  manage_worker.py  production_restart.sh  pyproject.toml  quick_restart.sh  railway.toml  reset_interview.py  restart_worker.sh  run_agent.py  send_email_only.py  send_interview_invitation.py  simple_restart.sh  simulate_e2e.py  simulate_interview.py  simulate_scoring_speed.py  simulate_timeout.py  start_api.py  start_backend.sh  start_worker_with_autorestart.sh  start_worker_with_cron.py
backend/app/: config.py  main.py  worker.py
backend/app/api/: applications.py  email.py  interview.py  invitations.py  jobs.py  reports.py  screening.py  validators.py  webhooks.py
backend/app/interview/: agent.py  entrypoint.py  evaluator.py  question_gen.py  session_manager.py
backend/app/models/: interview.py  screening.py
backend/app/services/: email.py  embeddings.py  logger.py  resume_parser.py  scoring.py  supabase.py
backend/app/tasks/: __init__.py  evaluate_interview.py  screen_resume.py
docs/: AUTH_ERROR_FIX.md  BULK_EMAIL_RATE_LIMIT_FIX.md  CANDIDATE_TABLE_404_FIX.md  CEO_UPDATE.md  DEPLOYMENT_COMPLETE.md  FRONTEND_RESTARTED.md  GRACE_PERIOD_FIX_SUMMARY.md  IMPLEMENTATION_PLAN.md  ISSUE_5_VAD_FIX.md  (+24 more)
(+107 files in other folders)
